microservices/calculator/compositeop/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: compositeop
  name: compositeop
  namespace: calculator
spec:
  replicas: 1
  selector:
    deploymentconfig: compositeop
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: compositeop
        deploymentconfig: compositeop
    spec:
      containers:
      - image: docker-registry.default.svc:5000/calculator/compositeop
        imagePullPolicy: Always
        name: compositeop
        ports:
        - containerPort: 8080
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - compositeop
      from:
        kind: ImageStreamTag
        name: compositeop:latest
        namespace: calculator
    type: ImageChange
  - type: ConfigChange
